--- a/app/src/main/res/drawable/file_button_yuanjiao.xml
+++ b/app/src/main/res/drawable/file_button_yuanjiao.xml
@@ -7,10 +7,10 @@
             <!--设置渐变色 angle=0 从左到右渲染，angle=90从上到下渲染，angle=180 从右到左渲染，-->
             <gradient
                 android:angle="90"
-                android:startColor="#009ade"
+                android:startColor="#0095d8"
                 android:endColor="#5ccdff" />
             <!--设置角的弧度-->
-            <corners android:radius="30dp" />
+            <corners android:radius="20dp" />
 
         </shape>
     </item>
@@ -20,7 +20,7 @@
             <!--点击之后的颜色-->
             <solid android:color="#007ab1"/>
             <!--设置角的弧度-->
-            <corners android:radius="30dp"/>
+            <corners android:radius="20dp"/>
         </shape>
     </item>
 </selector>
